gitops/components/external-secrets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    app.kubernetes.io/part-of: rhads-demo
    app.kubernetes.io/name: external-secrets
